Now update Stopwatch application

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-body{
+.main{
     background-image: url(images/stopwatch\ images.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: fixed;
+    height: 450px;
 }
 .main{
     text-align: center;
